fixed missing overflow on message list

--- a/public/style.css
+++ b/public/style.css
@@ -83,6 +83,7 @@ body, html {
     border:solid 1px rgba(0,0,0,0.15);
     background:#f6f6f6;
     margin-bottom:0;
+    overflow-y: scroll;
 }
 
 .message-list .msg {
